# hyper-core-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hyper_core_engine.cpp
benchmarks/: benchmark_latency.cpp
tests/: test_hyper_core.cpp
